Updated files to fix the vh behavior on mobile browsers

--- a/slidypages.css
+++ b/slidypages.css
@@ -20,7 +20,8 @@ body {
 }
 
 .slidy-page {
-	height: 100%;
+	height: 100vh;
+ 	height: calc(100vh - var(--vh-offset, 0px));
 	margin: 0;
 }
 
